Add updated schedule image - now the schedule will display properly!

--- a/src/pages/schedule.astro
+++ b/src/pages/schedule.astro
@@ -404,8 +404,8 @@
 					
 					<div class="schedule-image-container">
 						<h3>Komplett Schema</h3>
-						<img src="/schedule.png" alt="Westeras Tai-Nui Club Schema" class="schedule-image" />
-						<a href="/schedule.png" download class="download-btn">Ladda Ner Schema</a>
+						<img src="/schedule.svg" alt="Westeras Tai-Nui Club Schema" class="schedule-image" />
+						<a href="/schedule.svg" download class="download-btn">Ladda Ner Schema</a>
 					</div>
 				</div>
 			</div>
