--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -291,8 +291,8 @@
 				</a>
 				<nav>
 					<ul class="nav-links">
-						<li><a href="/#contact">Kontakt</a></li>
-						<li><a href="/#schedule">Schema</a></li>
+						<li><a href="/contact">Kontakt</a></li>
+						<li><a href="/schedule">Schema</a></li>
 						<li><a href="tel:070-565-35-88">Ring Oss</a></li>
 					</ul>
 				</nav>
